--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "gsap": "^3.12.1",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "sass": "^1.57.1",
-    "react-bootstrap-icons": "^1.10.3"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
