--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.5",
   "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev && sass --watch --update --style=expanded styles/scss:styles/css",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "gsap": "^3.12.1",
+    "next": "^14.2.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
@@ -18,10 +19,9 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.4"
+    "typescript": "^4.9.3"
   }
 }
