--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "version": "0.0.5",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "next dev",
@@ -14,13 +14,15 @@
     "next-intl": "^3.14.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^4.9.3"
   }
 }
