--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
+    "clsx": "^2.1.1",
     "next": "^14.2.0",
     "next-intl": "^3.14.1",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0"
@@ -27,9 +30,7 @@
     "@types/node": "20.12.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.12",
     "typescript": "^4.9.3"
   }
 }
