--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
