--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/postcss": "^4.0.13",
     "clsx": "^2.1.1",
     "next": "^15.2.2",
