--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/postcss": "^4.0.13",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "^15.2.2",
     "next-intl": "^3.26.5",
